# os-in-rust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: interrupts.rs  lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
