[package]
name = "os-in-rust"
version = "0.1.0"
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"